changed height to min height for sections to prevent overflow on design page adjusted horizontal padding for bookish title

--- a/src/styles/designs.module.css
+++ b/src/styles/designs.module.css
@@ -1,10 +1,10 @@
 @media (min-width: 1024px) {
   .section {
-    height: 100vh; 
+    min-height: 100vh; 
     padding: 5%;
   }
   .firstsection {
-    height: calc(100vh - 53px);
+    min-height: calc(100vh - 53px);
   }
 }
 
